--- a/src/app/usuario/usuario/usuario.component.html
+++ b/src/app/usuario/usuario/usuario.component.html
@@ -1,1 +1,38 @@
-<p>usuario works!</p>
+<div class="alert alert-info text-center" roler="alert" *ngIf="loading">
+    <h4 class="alert-heading">Cargando...</h4>
+    <p>
+      <i class="fa fa-sync fa-spin fa-x2">
+  
+      </i>
+    </p>
+    <p class="mb-0"></p>
+  </div>
+  
+  <div class="alert alert-danger text-center" roler="alert" *ngIf="error&&!usuario">
+    <h4 class="alert-heading">Error</h4>
+    <p>
+      {{error | json}}
+    </p>
+    <p class="mb-0"></p>
+  </div>
+  
+<div class="row" *ngIf="!loading&&usuario">
+    <div class="col-4">
+        <img [src]="usuario.avatar" class="img-thumbnail">
+    </div>
+
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item">
+                <b>Nombre:</b> {{usuario.first_name}}
+            </li>
+            <li class="list-group-item">
+                <b>Apellido:</b> {{usuario.last_name}}
+            </li>
+            <li class="list-group-item">
+                <b>Email:</b> {{usuario.email}}
+            </li>
+
+        </ul>
+    </div>
+</div>
